--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@supabase/supabase-js": "^1.35.6",
     "expo": "~53.0.9",
     "expo-image-picker": "~16.1.4",
+    "expo-media-library": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-google-places-autocomplete": "^1.4.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
